--- a/index.html
+++ b/index.html
@@ -1,45 +1,70 @@
 <head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.5.0/css/font-awesome.min.css">
-<link href='https://fonts.googleapis.com/css?family=Inconsolata' rel='stylesheet' type='text/css'>
-<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-<link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.2.3/animate.min.css">
-<link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js">
+<link href='https://fonts.googleapis.com/css?family=Source+Code+Pro' rel='stylesheet' type='text/css'>
+<link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css">
+<link rel="stylesheet" type="text/css" href="//cdnjs.cloudflare.com/ajax/libs/jquery/2.2.2/jquery.min.js">
 </head>
 <body>
 <div class="container">
-  <div class="row">
-    <div class="col-md-12">
-      <h1 class="text-center heading"> Wikipedia Search</h1>
+  <div class="calculator row">
+    <div class="screen col-md-12" id="screen">
+      0
     </div>
   </div>
-  <br><br>
-  <div class="row">
-    <div class="col-md-12">
-      <div class="text-center">
-        <div class="input">
-          <form onsubmit="return false">
-            <input class="search" id="search" type="text" placeholder="Search"/>
-            <button class="s-button" type="submit" title="Go to a page with this exact name if it exists"><i class="fa fa-search fa-lg"></i></button>
-          </form>
-          <br><br>
-        </div>
-      </div>
+  <div class="buttons row">
+    <div class="col-md-3">
+      <div class="button">1</div>
+    </div>
+    <div class="col-md-3">
+      <div class="button">2</div>
+    </div>
+    <div class="col-md-3">
+      <div class="button">3</div>
+    </div>
+    <div class="col-md-3">
+      <div class="button">4</div>
     </div>
   </div>
-  <div class="row">
-    <div class="col-md-12">
-      <div class="text-center">
-          <a href="http://en.wikipedia.org/wiki/Special:Random" target="_blank"><p class="text">Click here for a random article</p></a>
-        </a>
-      </div>
+  <div class="buttons row">
+    <div class="col-md-3">
+      <div class="button">5</div>
+    </div>
+    <div class="col-md-3">
+      <div class="button">6</div>
+    </div>
+    <div class="col-md-3">
+      <div class="button">7</div>
+    </div>
+    <div class="col-md-3">
+      <div class="button">8</div>
     </div>
   </div>
-</div>
-<br><br>
-<div class="row">
-  <div class="col-md-12">
-    <div class="content"></div>
+  <div class="buttons row">
+    <div class="col-md-3">
+      <div class="button">9</div>
+    </div>
+    <div class="col-md-3">
+      <div class="button">0</div>
+    </div>
+    <div class="col-md-3">
+      <div class="button operation">+</div>
+    </div>
+    <div class="col-md-3">
+      <div class="button operation">-</div>
+    </div>
+  </div>
+  <div class="buttons row">
+    <div class="col-md-3">
+      <div class="button operation">/</div>
+    </div>
+    <div class="col-md-3">
+      <div class="button operation">*</div>
+    </div>
+    <div class="col-md-3">
+      <div class="button operation">=</div>
+    </div>
+    <div class="col-md-3">
+      <div class="button operation clear">C</div>
+    </div>
   </div>
 </div>
 </div>
